@@ -384,6 +384,7 @@ public class BlobTestHelper extends TestHelper {
         }
         else {
             Assert.assertNotNull(blob2);
+            Assert.assertEquals(blob1.getClass(), blob2.getClass());
             Assert.assertEquals(blob1.getUri(), blob2.getUri());
             Assert.assertEquals(blob1.getSnapshotID(), blob2.getSnapshotID());
             Assert.assertEquals(blob1.isSnapshot(), blob2.isSnapshot());
@@ -399,6 +400,7 @@ public class BlobTestHelper extends TestHelper {
         }
         else {
             Assert.assertNotNull(prop2);
+            Assert.assertEquals(prop1.getBlobType(), prop2.getBlobType());
             Assert.assertEquals(prop1.getCacheControl(), prop2.getCacheControl());
             Assert.assertEquals(prop1.getContentDisposition(), prop2.getContentDisposition());
             Assert.assertEquals(prop1.getContentEncoding(), prop2.getContentEncoding());
