@@ -1,4 +1,5 @@
 2016.07.XX Version 0.8.0
+ * Added support for getBlobReferenceFromServer methods on CloudBlobContainer to support retrieving a blob without knowing its type.
  * Added support for setting a library-wide proxy. The default proxy can be set on OperationContext.
  * Added support in Page Blob for getting a list of differing page ranges between snapshot versions.
  * Added support in Page Blob for getting ranges of pages.
